# biometal-qc-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  test.fastq
src/: adapters.rs  contamination.rs  lib.rs  primers.rs  quality.rs  reporting.rs  rrna.rs  vlp.rs
